--- a/armonitor-web/src/main/webapp/partials/include/buildinfo.html
+++ b/armonitor-web/src/main/webapp/partials/include/buildinfo.html
@@ -44,8 +44,8 @@
 							<td>{{build.scm}}</td>
 						</tr>	
 						<tr>
-							<td>Agent version</td>
-							<td>{{build.ver}}</td>
+							<td>Key</td>
+							<td>{{build.key}}</td>
 						</tr>					
 					</table>					
 				</div>	
