Create the dashboard order by for application, project and system.

--- a/armonitor-web/src/main/webapp/partials/admin/app/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/app/edit.html
@@ -47,6 +47,14 @@
 						</div>
 
 						<div class="control-group">
+							<label class="control-label" for="index">Index</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<input id="index" type="number" class="form-control" placeholder="The index of the application" data-ng-model="data.index" required>
+							</div>
+						</div>
+						
+						<div class="control-group">
 							<label class="control-label" for="tt">Type</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
