--- a/armonitor-web/src/main/webapp/partials/admin/project/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/project/edit.html
@@ -47,6 +47,14 @@
 						</div>
 
 						<div class="control-group">
+							<label class="control-label" for="index">Index</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<input id="index" type="number" class="form-control" placeholder="The index of the project" data-ng-model="data.index" required>
+							</div>
+						</div>
+						
+						<div class="control-group">
 							<label class="control-label" for="btsId">Bug tracking issue key</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
