--- a/armonitor-web/src/main/webapp/partials/admin/sys/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/sys/edit.html
@@ -45,6 +45,15 @@
 								<input id="name" type="text" class="form-control" placeholder="Name" data-ng-model="data.name" required>
 							</div>
 						</div>
+						
+						<div class="control-group">
+							<label class="control-label" for="index">Index</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<input id="index" type="number" class="form-control" placeholder="The index of the system" data-ng-model="data.index" required>
+							</div>
+						</div>
+						
 						<div class="control-group">
 							<label class="control-label" for="timer"></label>
 							<div class="controls">
