--- a/armonitor-web/src/main/webapp/partials/dashboard.html
+++ b/armonitor-web/src/main/webapp/partials/dashboard.html
@@ -18,7 +18,7 @@
 
 <div class="alert alert-info alert-dismissable" data-ng-hide="dashboard.msg">
 	<button type="button" class="close" data-dismiss="alert" aria-hidden="true"  ng-click="closeMsg()">&times;</button>
-	Welcome to Application release monitor by <a class="alert-link" href="http://www.lorislab.org">lorislab.org</a> community.
+	Welcome to Application release monitor by <a class="alert-link" href="http://www.lorislab.org" target="_blank">lorislab.org</a> community.
 </div>
 
 <div data-ng-show="dashboard">
