Fix javascript bugs.

--- a/armonitor-web/src/main/webapp/partials/admin/app/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/app/edit.html
@@ -175,6 +175,7 @@
 							<span class="input-group-btn">
 								<button class="btn btn-default" type="button" data-ng-click="clear()"><i class="icon-erase"></i></button>
 								<button class="btn btn-default" type="button" data-ng-click="reload()"><i class="icon-arrows-cw"></i></button>
+								<a class="btn btn-default" href="#/settings/sys/edit" ><i class="icon-doc-text"></i></a>
 							</span>				
 						</div>			
 					</div>
