Add the user key to the edit page.

--- a/armonitor-web/src/main/webapp/partials/admin/user/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/user/edit.html
@@ -48,6 +48,14 @@
 							</div>
 						</div>
 						
+						<div class="control-group" data-ng-hide="data.n">
+							<label class="control-label" for="key">Key</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<input id="key" type="text" class="form-control" placeholder="Name" data-ng-model="data.guid" readonly>
+							</div>
+						</div>
+						
 						<div class="control-group">
 							<label class="control-label" for="name">Name</label>
 							<div class="input-group">
