Bug fix: Dynamic keys for the links.

--- a/armonitor-web/src/main/webapp/partials/admin/app/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/app/edit.html
@@ -94,6 +94,15 @@
 							</div>
 						</div>
 						
+						<h6>
+							<span class="label label-info">${server}</span>
+							<span class="label label-info">${groupId}</span> 
+							<span class="label label-info">${artifactId}</span> 
+							<span class="label label-info">${mavenVersion}</span> 
+							<span class="label label-info">${scm}</span> 
+							<span class="label label-info">${build}</span> 
+								dynamic keys.
+						</h6>
 						
 						<div class="control-group">
 							<label class="control-label" for="save"></label>
