--- a/armonitor-web/src/main/webapp/partials/admin/bts/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/bts/edit.html
@@ -78,9 +78,17 @@
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
 								<input id="link" type="text" class="form-control" placeholder="Read timeout" data-ng-model="data.link" >
 							</div>
-							<h6><span class="label label-info">${id}</span> issue id.</h6>
 						</div>
 
+						<h6>
+							<span class="label label-info">${key}</span>
+							<span class="label label-info">${parent}</span> 
+							<span class="label label-info">${status}</span> 
+							<span class="label label-info">${user}</span> 
+							<span class="label label-info">${btsId}</span> 
+								dynamic keys.
+						</h6>
+						
 						<div class="control-group">
 							<label class="control-label" for="save"></label>
 							<div class="controls">
