--- a/armonitor-web/src/main/webapp/partials/admin/services/mail.html
+++ b/armonitor-web/src/main/webapp/partials/admin/services/mail.html
@@ -99,7 +99,7 @@
 			</tab>
 			<tab>
 				<tab-heading>
-					<i class="icon-mail-alt"></i> Test email
+					<i class="icon-rocket"></i> Test email
 				</tab-heading>
 				<form class="form-horizontal" data-ng-submit="test()">
 					<fieldset>
