--- a/armonitor-web/src/main/webapp/partials/admin/bts/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/bts/edit.html
@@ -96,7 +96,7 @@
 								<button id="save" type="submit" class="btn btn-success" data-ng-show="data.n" ><i class="icon-doc-text"></i> Create</button>
 								<button id="close" type="button" class="btn btn-default" data-ng-click="close()" ><i class="icon-floppy"></i> Close</button>
 								<span style="float: right">
-									<button type="button" class="btn btn-danger" data-ng-disabled="data.n" data-ng-click="delete()"><i class="icon-trash"></i> Delete</button>
+									<button type="button" class="btn btn-danger" data-ng-disabled="data.n" data-ng-click="remove()"><i class="icon-trash"></i> Delete</button>
 								</span>								
 							</div>
 						</div>					
