--- a/armonitor-web/src/main/webapp/partials/admin/project/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/project/edit.html
@@ -69,7 +69,7 @@
 								<button id="save" type="submit" class="btn btn-success" data-ng-show="data.n" ><i class="icon-doc-text"></i> Create</button>
 								<button id="close" type="button" class="btn btn-default" data-ng-click="close()" ><i class="icon-floppy"></i> Close</button>
 								<span style="float: right">
-									<button type="button" class="btn btn-danger" data-ng-disabled="data.n" data-ng-click="delete()"><i class="icon-trash"></i> Delete</button>
+									<button type="button" class="btn btn-danger" data-ng-disabled="data.n" data-ng-click="remove()"><i class="icon-trash"></i> Delete</button>
 								</span>								
 							</div>
 						</div>					
@@ -92,11 +92,19 @@
 								</select>
 							</div>
 						</div>
-
+						<div class="control-group" data-ng-show="bts.selected">
+							<label class="control-label">Connection status:</label>							
+							<label class="label label-default" data-ng-show="test.result !== 'req' && test.result !== 'ok' && test.result !== 'error'" >?</label>
+							<label class="label label-info" data-ng-show="test.result === 'req'"><i class="animate-spin icon-arrows-cw"></i></label>
+							<label class="label label-success" data-ng-show="test.result === 'ok'"><i class="icon-ok"></i></label>
+							<label class="label label-danger" data-ng-show="test.result === 'error'"><i class="icon-bug"></i></label>
+						</div>
+						
 						<div class="control-group">
 							<label class="control-label" for="cp"></label>
 							<div class="controls">
 								<button id="cp" class="btn btn-success" type="submit" ><i class="icon-floppy"></i>  Update</button>
+								<button id="test" type="button" class="btn btn-success" data-ng-click="test()" data-ng-disabled="!bts.selected || !data.btsId"><i class="icon-rocket"></i>  Test connection</button>
 								<button id="close" type="button" class="btn btn-default" data-ng-click="close()" ><i class="icon-floppy"></i> Close</button>
 							</div>												
 						</div>
