--- a/armonitor-web/src/main/webapp/partials/admin/sys/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/sys/edit.html
@@ -110,7 +110,7 @@
 								<button id="close" type="button" class="btn btn-default" data-ng-click="close()" ><i class="icon-floppy"></i> Close</button>
 								<button id="notify" type="button" class="btn btn-default" data-ng-disabled="!data.notification || data.n" data-ng-click="notify()" ><i class="icon-mail-alt"></i> Send notification</button>
 								<span style="float: right">
-									<button type="button" class="btn btn-danger" data-ng-disabled="data.n" data-ng-click="delete()"><i class="icon-trash"></i> Delete</button>
+									<button type="button" class="btn btn-danger" data-ng-disabled="data.n" data-ng-click="remove()"><i class="icon-trash"></i> Delete</button>
 								</span>								
 							</div>
 						</div>					
