--- a/armonitor-web/src/main/webapp/partials/admin/app/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/app/edit.html
@@ -53,7 +53,7 @@
 								<input id="index" type="number" class="form-control" placeholder="The index of the application" data-ng-model="data.index" required>
 							</div>
 						</div>
-						
+
 						<div class="control-group">
 							<label class="control-label" for="tt">Type</label>
 							<div class="input-group">
@@ -93,7 +93,7 @@
 								<input id="repoLink" type="text" class="form-control" placeholder="Name" data-ng-model="data.repoLink">
 							</div>
 						</div>
-						
+
 						<h6>
 							<span class="label label-info">${server}</span>
 							<span class="label label-info">${groupId}</span> 
@@ -101,9 +101,9 @@
 							<span class="label label-info">${mavenVersion}</span> 
 							<span class="label label-info">${scm}</span> 
 							<span class="label label-info">${build}</span> 
-								dynamic keys.
+							dynamic keys.
 						</h6>
-						
+
 						<div class="control-group">
 							<label class="control-label" for="save"></label>
 							<div class="controls">
@@ -163,9 +163,28 @@
 						</div>
 
 						<div class="control-group">
+							<label class="control-label" for="testurl">Test repository URL</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<select id="testurl" class="form-control" data-ng-model="test.url" data-ng-options="u for u in urls">									
+									<option value="">--- select a test URL ---</option>
+								</select>
+							</div>
+						</div>
+						
+						<div class="control-group" data-ng-show="bts.selected">
+							<label class="control-label">Connection status:</label>							
+							<label class="label label-default" data-ng-show="test.result !== 'req' && test.result !== 'ok' && test.result !== 'error'" >?</label>
+							<label class="label label-info" data-ng-show="test.result === 'req'"><i class="animate-spin icon-arrows-cw"></i></label>
+							<label class="label label-success" data-ng-show="test.result === 'ok'"><i class="icon-ok"></i></label>
+							<label class="label label-danger" data-ng-show="test.result === 'error'"><i class="icon-bug"></i></label>
+						</div>
+						
+						<div class="control-group">
 							<label class="control-label" for="cp"></label>
 							<div class="controls">
 								<button id="cp" class="btn btn-success" type="submit" ><i class="icon-floppy"></i>  Update</button>
+								<button id="test" type="button" class="btn btn-success" data-ng-click="test()" data-ng-disabled="!bts.selected || !test.url"><i class="icon-rocket"></i>  Test connection</button>
 								<button id="close" type="button" class="btn btn-default" data-ng-click="close()" ><i class="icon-floppy"></i> Close</button>
 							</div>												
 						</div>
