Add the application repository type.

--- a/armonitor-web/src/main/webapp/partials/admin/app/edit.html
+++ b/armonitor-web/src/main/webapp/partials/admin/app/edit.html
@@ -87,6 +87,24 @@
 						</div>
 
 						<div class="control-group">
+							<label class="control-label" for="scmRepo">Source code repository</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<input id="scmRepo" type="text" class="form-control" placeholder="Name" data-ng-model="data.scmRepo">
+							</div>
+						</div>
+						
+						<div class="control-group">
+							<label class="control-label" for="scmType">Source code repository type</label>
+							<div class="input-group">
+								<span class="input-group-addon"><i class="icon-pencil"></i></span>
+								<!--<input id="scmType" type="text" class="form-control" placeholder="Name" data-ng-model="data.scmType">-->
+								<select id="scmType" class="form-control" data-ng-model="data.scmType" data-ng-options="k as v for (k,v) in scmTypes">									
+								</select>
+							</div>
+						</div>
+						
+						<div class="control-group">
 							<label class="control-label" for="repoLink">Repository link</label>
 							<div class="input-group">
 								<span class="input-group-addon"><i class="icon-pencil"></i></span>
