Create system build parameter for the deployment.

--- a/armonitor-web/src/main/webapp/partials/deploy/deploy.html
+++ b/armonitor-web/src/main/webapp/partials/deploy/deploy.html
@@ -6,10 +6,16 @@
 	<li>
 		<i class="icon-rocket"></i> 
 		<a href="#/deploy">
-			Systems
+			Deployments
 		</a>
 	</li>
 	<li class="active">
-		<i class="icon-rocket"></i> Deployment
+		<i class="icon-award"></i> {{data.system.project}}
+	</li>
+	<li class="active">
+		<i class="icon-beaker"></i> {{data.system.application}}
+	</li>	
+	<li class="active">
+		<i class="icon-suitcase"></i> {{data.system.name}}
 	</li>	
 </ol>
